Poryecto concluído, adicionar mejoras